# carina-provider-awscc

./: .carina-core-min-rev  .gitignore  CLAUDE.md  CODEGEN.md  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
acceptance-tests/: README.md  run-tests.sh
acceptance-tests/allowed_account_ids_guard/: basic.crn  run.sh
acceptance-tests/attribute_removal/: ec2_vpc_endpoint_step1.crn  ec2_vpc_endpoint_step2.crn  logs_log_group_step1.crn  logs_log_group_step2.crn  run.sh
acceptance-tests/builtin_functions/: cidr_subnet.crn  concat.crn  flatten.crn  join.crn  keys_values.crn  length.crn  local_let.crn  lookup.crn  min_max.crn  replace.crn  run.sh  split.crn  trim.crn  upper_lower.crn
acceptance-tests/cascade_without_cbd/: run.sh  step1.crn  step2.crn
acceptance-tests/cloudfront_distribution/: basic.crn  run.sh
acceptance-tests/cloudfront_origin_access_control/: basic.crn
acceptance-tests/create_before_destroy/: ec2_transit_gateway_attachment_step1.crn  ec2_transit_gateway_attachment_step2.crn  ec2_vpc_step1.crn  ec2_vpc_step2.crn  iam_role_step1.crn  iam_role_step2.crn  run.sh
acceptance-tests/dynamodb_table/: basic.crn
acceptance-tests/ec2_egress_only_internet_gateway/: basic.crn
acceptance-tests/ec2_eip/: basic.crn
acceptance-tests/ec2_flow_log/: cloudwatch.crn  s3.crn
acceptance-tests/ec2_internet_gateway/: basic.crn
acceptance-tests/ec2_ipam/: basic.crn
acceptance-tests/ec2_ipam_pool/: basic.crn
acceptance-tests/ec2_nat_gateway/: private.crn  public.crn
acceptance-tests/ec2_route/: igw.crn  ipv6.crn  nat_gateway.crn  nat_gateway.slow  transit_gateway.crn  vpc_peering.crn
acceptance-tests/ec2_route_table/: basic.crn
acceptance-tests/ec2_security_group/: ipv6_rules.crn  prefix.crn  with_egress.crn  with_ingress.crn
acceptance-tests/ec2_security_group_egress/: basic.crn  dest_sg.crn  ipv6.crn
acceptance-tests/ec2_security_group_ingress/: basic.crn  ipv6.crn  source_sg.crn
acceptance-tests/ec2_subnet/: basic.crn  ipv6.crn  with_dns_options.crn  with_ipam.crn
acceptance-tests/ec2_subnet_route_table_association/: basic.crn
acceptance-tests/ec2_transit_gateway/: basic.crn
acceptance-tests/ec2_transit_gateway_attachment/: basic.crn
acceptance-tests/ec2_vpc/: basic.crn
acceptance-tests/ec2_vpc_endpoint/: gateway.crn  interface.crn
acceptance-tests/ec2_vpc_gateway_attachment/: igw.crn  vpn.crn
acceptance-tests/ec2_vpc_peering_connection/: basic.crn
acceptance-tests/ec2_vpn_gateway/: basic.crn
acceptance-tests/ecs_cluster/: basic.crn
acceptance-tests/elasticloadbalancingv2_listener/: basic.crn
acceptance-tests/elasticloadbalancingv2_load_balancer/: basic.crn
acceptance-tests/elasticloadbalancingv2_target_group/: basic.crn
acceptance-tests/for_expression/: for_list.crn  for_map.crn  for_module.crn  for_module_complex.crn  index_access.crn  run.sh
acceptance-tests/iam_oidc_provider/: basic.crn
acceptance-tests/iam_role/: managed_policy.crn  prefix.crn  with_path.crn  with_policy.crn
acceptance-tests/iam_role_policy/: basic.crn
acceptance-tests/if_expression/: if_else_value.crn  if_false.crn  if_true.crn  run.sh
acceptance-tests/in_place_update/: ec2_egress_only_internet_gateway_step1.crn  ec2_eip_step1.crn  (+39 more)
carina-aws-types/: Cargo.toml
carina-aws-types/src/: lib.rs
carina-awscc-types/: Cargo.toml
carina-awscc-types/src/: lib.rs
carina-provider-awscc/: Cargo.toml
carina-provider-awscc/scripts/: generate-schemas.sh
carina-provider-awscc/src/: convert.rs  lib.rs  main.rs  resources.rs
carina-provider-awscc/src/provider/: account_guard.rs  arn_synthesis.rs  assume_role.rs  cloudcontrol.rs  conversion.rs  mod.rs  normalizer.rs  operations.rs  s3.rs  special_cases.rs  tags.rs  update.rs
carina-provider-awscc/src/schemas/: awscc_types.rs  config.rs  mod.rs  operation_configs.rs
carina-provider-awscc/tests/: cloudfront_distribution_arn.rs  dynamodb_table_arn.rs  dynamodb_table_cloudcontrol_roundtrip.rs  ec2_ipam_arn.rs  ec2_ipam_pool_arn.rs  ec2_vpc_endpoint_policy_document_read.rs  ecs_cluster_arn.rs  ecs_cluster_cloudcontrol_roundtrip.rs  elasticloadbalancingv2_listener_cloudcontrol_roundtrip.rs  elasticloadbalancingv2_listener_redirect_types.rs  elasticloadbalancingv2_listener_status_code_type.rs  elasticloadbalancingv2_load_balancer_cloudcontrol_roundtrip.rs  elasticloadbalancingv2_target_group_cloudcontrol_roundtrip.rs  iam_oidc_provider_arn.rs  iam_policy_arn.rs  iam_role_arn.rs  iam_role_cloudcontrol_identifier.rs  kms_key_arn.rs  kms_key_cloudcontrol_roundtrip.rs  logs_log_group_arn.rs  organizations_account_arn.rs  organizations_organization_arn.rs  s3_bucket_arn.rs  wafv2_web_acl_arn.rs
carina-provider-awscc/tests/common/: mod.rs
carina-provider-awscc/tests/fixtures/: extract_enum_snapshot_pre_365.json
cfn-schema-cache/: AWS__DynamoDB__Table.json  AWS__EC2__EIP.json  AWS__EC2__EgressOnlyInternetGateway.json  AWS__EC2__FlowLog.json  AWS__EC2__IPAM.json  AWS__EC2__InternetGateway.json  AWS__EC2__NatGateway.json  AWS__EC2__Route.json  AWS__EC2__RouteTable.json  AWS__EC2__SecurityGroup.json  AWS__EC2__SecurityGroupEgress.json  AWS__EC2__SecurityGroupIngress.json  AWS__EC2__Subnet.json  AWS__EC2__SubnetRouteTableAssociation.json  AWS__EC2__TransitGateway.json  AWS__EC2__TransitGatewayAttachment.json  AWS__EC2__VPC.json  AWS__EC2__VPCEndpoint.json  AWS__EC2__VPCGatewayAttachment.json  AWS__EC2__VPNGateway.json  AWS__ECS__Cluster.json  AWS__ElasticLoadBalancingV2__Listener.json  AWS__ElasticLoadBalancingV2__LoadBalancer.json  AWS__ElasticLoadBalancingV2__TargetGroup.json  AWS__IAM__OIDCProvider.json  AWS__IAM__Role.json  AWS__IdentityStore__Group.json  AWS__IdentityStore__GroupMembership.json  AWS__KMS__Key.json  AWS__Logs__LogGroup.json  AWS__Organizations__Account.json  AWS__Organizations__Organization.json  AWS__Route53__HostedZone.json  AWS__S3__Bucket.json  AWS__SSO__Assignment.json  AWS__SSO__Instance.json  AWS__SSO__PermissionSet.json  NOTICE.md
scripts/: check-carina-pin.sh  check-docs-drift.sh  generate-docs.sh  pre-commit  setup-hooks.sh
src/: main.rs
(+175 files in other folders)
