[package]
name = "carina-provider-awscc"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AWS Cloud Control provider for Carina infrastructure management tool"
repository = "https://github.com/carina-rs/carina-provider-awscc"
homepage = "https://github.com/carina-rs/carina-provider-awscc"

[lib]
doctest = false

[[bin]]
name = "carina-provider-awscc"
path = "src/main.rs"

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina" }
carina-aws-types = { git = "https://github.com/carina-rs/carina" }
carina-plugin-host = { git = "https://github.com/carina-rs/carina" }
carina-plugin-sdk = { git = "https://github.com/carina-rs/carina" }
carina-provider-protocol = { git = "https://github.com/carina-rs/carina" }
aws-config = "1"
aws-sdk-cloudcontrol = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
http = "1"
