[package]
name = "carina-aws-types"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "AWS type definitions for Carina infrastructure management tool"



[lib]
doctest = false

[dev-dependencies]
indexmap = "2"

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina", rev = "0b1bdcd35479617c60ddcd2c84b336f36b92b9b8" }
