[package]
name = "carina-aws-types"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "AWS type definitions for Carina infrastructure management tool"



[lib]
doctest = false

[dev-dependencies]
indexmap = "2"

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina", rev = "bbcc5ac2d801e2e3f056e446407b095a74569f54" }
