[package]
name = "carina-aws-types"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "AWS type definitions for Carina infrastructure management tool"



[lib]
doctest = false

[dev-dependencies]
indexmap = "2"

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina", rev = "6fe9d3f220c3f3011fa5607e9dd321d63f049064" }
