[package]
name = "carina-awscc-types"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "AWS type definitions for Carina infrastructure management tool"



[lib]
doctest = false

[dev-dependencies]
indexmap = "2"

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina", rev = "31f62d0140e754fcf6867b67d7c1e1aab008acf7" }
