[package]
name = "carina-provider-awscc"
version.workspace = true
edition = "2024"
license = "MIT"
description = "AWS Cloud Control provider for Carina infrastructure management tool"
repository = "https://github.com/carina-rs/carina-provider-awscc"
homepage = "https://github.com/carina-rs/carina-provider-awscc"

[lib]
doctest = false

[[bin]]
name = "carina-provider-awscc"
path = "src/main.rs"

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[features]
default = ["native"]
native = []

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina", rev = "31f62d0140e754fcf6867b67d7c1e1aab008acf7" }
carina-awscc-types = { path = "../carina-awscc-types" }
carina-aws-types = { git = "https://github.com/carina-rs/carina-provider-aws", rev = "0883f60174b189eaef3b31256ae8bb9e0454a2fe" }
carina-plugin-sdk = { git = "https://github.com/carina-rs/carina", rev = "31f62d0140e754fcf6867b67d7c1e1aab008acf7" }
carina-provider-protocol = { git = "https://github.com/carina-rs/carina", rev = "31f62d0140e754fcf6867b67d7c1e1aab008acf7" }
indexmap = "2"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-credential-types = { version = "1" }
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
aws-sdk-cloudcontrol = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
http = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
winterbaume-core = "0.2"
winterbaume-cloudcontrol = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "sync"] }
wit-bindgen = { version = "0.54", default-features = false, features = ["macros"] }
wasi = "0.14"
